Navbar overlapping bug fixed

--- a/src/app/bottom-navigation-bar/bottom-navigation-bar.component.css
+++ b/src/app/bottom-navigation-bar/bottom-navigation-bar.component.css
@@ -1,12 +1,14 @@
 .header_content {
   font-family: monospace;
   width: 100%;
-  height: 10%;
-
+  height: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   /*margin-top: 12px;*/
-  padding-top: 24px;
+  /*padding-top: 24px;*/
   /*padding-bottom: 24px;*/
-  margin-bottom: 24px;
+  /*margin-bottom: 24px;*/
   /*position: fixed;*/
   /*display: flex;*/
   /*justify-content: space-evenly;*/
