--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  padding-bottom: 70px;
+  padding-bottom: 100px;
 }
 html, body {
   height: 100%;
@@ -73,6 +73,7 @@ html, body {
   font-family: monospace;
   font-size: 16px;
   height: 330px;
+  padding-bottom: 70px;
 }
 
 th, td {
